@@ -6,30 +6,23 @@ import com.doodream.rmovjs.serde.Converter;
 import com.doodream.rmovjs.serde.Reader;
 import com.doodream.rmovjs.serde.Writer;
 import com.google.gson.*;
-import com.google.gson.reflect.TypeToken;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.lang.reflect.ParameterizedType;
+import javax.xml.bind.DatatypeConverter;
+import java.io.*;
 import java.lang.reflect.Type;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
-import java.util.Base64;
 
 public class JsonConverter implements Converter {
-    private static final Logger Log = LoggerFactory.getLogger(JsonConverter.class);
 
     private static class ByteArrayToBase64TypeAdapter implements JsonSerializer<byte[]>, JsonDeserializer<byte[]> {
         public byte[] deserialize(JsonElement json, Type typeOfT, JsonDeserializationContext context) throws JsonParseException {
-            byte[] data = Base64.getDecoder().decode(json.getAsString());
+            byte[] data = DatatypeConverter.parseBase64Binary(json.getAsString());
             return data;
         }
 
         public JsonElement serialize(byte[] src, Type typeOfSrc, JsonSerializationContext context) {
-            return new JsonPrimitive(Base64.getEncoder().withoutPadding().encodeToString(src));
+            return new JsonPrimitive(DatatypeConverter.printBase64Binary(src));
         }
     }
 
@@ -53,26 +46,7 @@ public class JsonConverter implements Converter {
                     }
                     return null;
                 }
-            }).registerTypeAdapter(Class.class, new TypeAdapter<Class<Object>>() {
-
-                @Override
-                public void write(com.google.gson.stream.JsonWriter jsonWriter, Class<Object> objectClass) throws IOException {
-                    jsonWriter.value(objectClass.getName());
-
-                }
-
-                @Override
-                public Class<Object> read(com.google.gson.stream.JsonReader jsonReader) throws IOException {
-                    try {
-                        return (Class<Object>) Class.forName(jsonReader.nextString());
-                    } catch (ClassNotFoundException e) {
-                        e.printStackTrace();
-                    }
-                    return null;
-                }
-
-            })
-            .registerTypeAdapter(SessionControlMessage.class, new TypeAdapter<SessionControlMessage<?>>() {
+            }).registerTypeAdapter(SessionControlMessage.class, new TypeAdapter<SessionControlMessage<?>>() {
                 @Override
                 public void write(com.google.gson.stream.JsonWriter jsonWriter, SessionControlMessage<?> sessionControlMessage) throws IOException {
                     if(sessionControlMessage != null) {
@@ -116,34 +90,32 @@ public class JsonConverter implements Converter {
             })
             .create();
 
-    private static Type getType(Class<?> rawClass, Class<?> ...parameter) {
-        return new ParameterizedType() {
-            @Override
-            public Type[] getActualTypeArguments() {
-                return parameter;
-            }
 
-            @Override
-            public Type getRawType() {
-                return rawClass;
-            }
 
+    @Override
+    public Reader reader(final InputStream inputStream)  {
+        return new Reader() {
+            private BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream));
             @Override
-            public Type getOwnerType() {
-                return null;
+            public <T> T read(Class<T> cls) throws IOException {
+                String line = reader.readLine();
+                if(line == null) {
+                    return null;
+                }
+                line = line.trim();
+                return invert(StandardCharsets.UTF_8.encode(line).array(), cls);
             }
         };
     }
 
-
     @Override
-    public Reader reader(InputStream inputStream)  {
-        return new JsonReader(this, inputStream);
-    }
-
-    @Override
-    public Writer writer(OutputStream outputStream) {
-        return new JsonWriter(this, outputStream);
+    public Writer writer(final OutputStream outputStream) {
+        return new Writer() {
+            @Override
+            public void write(Object src) throws IOException {
+                outputStream.write(convert(src));
+            }
+        };
     }
 
     @Override
@@ -158,13 +130,10 @@ public class JsonConverter implements Converter {
     }
 
     @Override
-    public <T> T invert(byte[] b, Class<T> rawClass, Class<?> ...parameter) {
-        ByteBuffer buffer = ByteBuffer.wrap(b);
-        return GSON.fromJson(StandardCharsets.UTF_8.decode(buffer).toString(), getType(rawClass, parameter));
-    }
-
-    @Override
-    public <T> T resolve(Object unresolved, Type type) {
+    public Object resolve(Object unresolved, Type type) {
+        if(unresolved == null) {
+            return null;
+        }
         return GSON.fromJson(GSON.toJson(unresolved), type);
     }
 
